--- a/pages/Templates/base.html
+++ b/pages/Templates/base.html
@@ -1,4 +1,4 @@
-<!-- pages/templates/base.html -->
+!-- pages/templates/base.html -->
 <header>
 
     <a href="{% url 'home' %}">Home</a> | <a href="{% url 'about' %}">About</a>
