--- a/pages/Templates/base.html
+++ b/pages/Templates/base.html
@@ -1,13 +1,13 @@
-!-- pages/templates/base.html -->
+<!-- pages/templates/base.html -->
 <header>
 
     <a href="{% url 'home' %}">Home</a> | <a href="{% url 'about' %}">About</a>
   
   </header>
+
+  <footer>
+    Social Media Links
+  </footer>
   
   {% block content %}
   {% endblock content %}
-
-  <footer>
-    Soical Media Links
-  </footer>
