--- a/pages/Templates/about.html
+++ b/pages/Templates/about.html
@@ -5,6 +5,6 @@
 <h1>About page</h1>
 
 <div>
-    Fun fact: I have a third degree burn mark on my hand. 
+    I have a childhood thid degree burn on my hand
 </div>
 {% endblock content %}
