--- a/pages/Templates/about.html
+++ b/pages/Templates/about.html
@@ -5,6 +5,6 @@
 <h1>About page</h1>
 
 <div>
-    I have a childhood thid degree burn on my hand
+    I have a childhood third degree burn on my hand
 </div>
 {% endblock content %}
